syntax = "proto3";

import "students.proto"; // we import it to use the Order by message field

package main;

option go_package = "/proto/gen;grpcapipb";

service ExecsService {
    rpc GetExecs (GetExecsRequest) returns (Execs);
    rpc AddExecs (Execs) returns (Execs);
    rpc UpdateExecs (Execs) returns (Execs);
    rpc DeleteExecs (ExecIds) returns (DeleteExecsConfirmation);

    rpc Login (ExecLoginRequest) returns (ExecLoginResponse);
    rpc Logout (EmptyRequest) returns (ExecLogoutResponse);
    rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordResponse);
    rpc ResetPassword (ResetPasswordRequest) returns (Confirmation);
    rpc ForgotPassword (ForgotPasswordRequest) returns (ForgotPasswordResponse);
    rpc DeactivateUser (ExecIds) returns (Confirmation);
}

message ForgotPasswordResponse {
    bool confirmation = 1;
    string message = 2;
}

message ForgotPasswordRequest {
    string email = 1;
}

message Confirmation {
    bool confirmation = 1;
}

message ResetPasswordRequest {
    string reset_code = 1;
    string new_password = 2;
    string confirm_password = 3;
}

message UpdatePasswordResponse {
    bool password_updated = 1;
    string token = 2;
}

message ExecLogoutResponse {
    bool logged_out = 1;
}

message ExecLoginRequest {
    bool status = 1;
    string token = 2;
}

message ExecLoginResponse {
    string username = 1;
    string pssword = 2; 
}

message UpdatePasswordRequest{
    string id = 1;
    string current_password = 2;
    string new_password = 3;
}

message EmptyRequest {}

message DeleteExecsConfirmation {
    string status = 1;
    repeated string deleted_ids = 2;
}

message ExecId {
    string id = 1;
}

message ExecIds {
    repeated ExecId ids = 1; 
}

message GetExecsRequest {
    Exec exec = 1;
    repeated SortField sortField = 2;
    uint32 page_number = 3;
    uint32 page_size = 4;
}

message Exec {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string user_name = 5;
    string password = 6;
    string password_changed_at = 7;
    string user_created_at = 8;
    string password_reset_at = 9;
    string password_reset_token = 10;
    string password_token_expires = 11;
    string role = 12;
    bool inactive_status = 13;
}

message Execs {
    repeated Exec execs = 1;
}
